// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loopback > basic 1`] = `
Channel {
  "address": Address {},
  "aliases": [],
  "channelId": 0,
  "rx": Rx {
    "reducer": RxQueue {
      "promisedReplies": [],
      "promisedRequestIds": [],
      "replies": [],
      "repliesLength": 1,
      "requests": [],
      "requestsLength": 1,
    },
    "system": RxQueue {
      "promisedReplies": [],
      "promisedRequestIds": [],
      "replies": [],
      "repliesLength": 0,
      "requests": [],
      "requestsLength": 0,
    },
    "tip": PulseLink {},
  },
  "tx": Tx {
    "precedent": PulseLink {},
    "reducer": TxQueue {
      "promisedReplies": [],
      "promisedRequestIds": [],
      "replies": [],
      "repliesLength": 1,
      "requests": [],
      "requestsLength": 1,
    },
    "system": TxQueue {
      "promisedReplies": [],
      "promisedRequestIds": [],
      "replies": [],
      "repliesLength": 0,
      "requests": [],
      "requestsLength": 0,
    },
  },
}
`;

exports[`loopback basic 1`] = `
Channel {
  "address": Address {},
  "aliases": Array [],
  "channelId": 0,
  "rx": Rx {
    "reducer": RxQueue {
      "promisedReplies": Array [],
      "promisedRequestIds": Array [],
      "replies": Array [],
      "repliesLength": 1,
      "requests": Array [],
      "requestsLength": 1,
    },
    "system": RxQueue {
      "promisedReplies": Array [],
      "promisedRequestIds": Array [],
      "replies": Array [],
      "repliesLength": 0,
      "requests": Array [],
      "requestsLength": 0,
    },
    "tip": PulseLink {},
  },
  "tx": Tx {
    "precedent": PulseLink {},
    "reducer": TxQueue {
      "promisedReplies": Array [],
      "promisedRequestIds": Array [],
      "replies": Array [],
      "repliesLength": 1,
      "requests": Array [],
      "requestsLength": 1,
    },
    "system": TxQueue {
      "promisedReplies": Array [],
      "promisedRequestIds": Array [],
      "replies": Array [],
      "repliesLength": 0,
      "requests": Array [],
      "requestsLength": 0,
    },
  },
}
`;
